styles(app): change transform: scale() styles to others for hover and focus-visible effects

--- a/src/components/CartProductItem/CartProductItem.scss
+++ b/src/components/CartProductItem/CartProductItem.scss
@@ -81,13 +81,13 @@
     }
 
     &__button--delete {
-        transition: transform var(--transition);
+        transition: filter var(--transition);
 
         @include desktop-screen {
 
             &:hover,
             &:focus-visible {
-                transform: scale(1.05);
+                filter: brightness(0.8);
             }
         }
 
@@ -95,7 +95,7 @@
 
             &:hover,
             &:focus-visible {
-                transform: none;
+                filter: brightness(1);
             }
         }
     }
