--- a/src/components/DropdownPages/DropdownPages.scss
+++ b/src/components/DropdownPages/DropdownPages.scss
@@ -10,7 +10,7 @@
         @include font(var(--font-family), 700, 1);
         color: var(--color-blue);
         padding: 0;
-        transition: transform var(--transition);
+        transition: color var(--transition);
 
         @media (max-width: 1170px) {
             @include fluid-text(16, 14);
@@ -27,7 +27,7 @@
 
             &:hover,
             &:focus-visible {
-                transform: scale(1.05);
+                color: var(--color-darkblue);
             }
         }
 
@@ -35,7 +35,7 @@
 
             &:hover,
             &:focus-visible {
-                transform: none;
+                color: var(--color-darkblue);
             }
         }
     }
