perf(components): optimize components (React.memo, useMemo, useCallback)

--- a/src/components/BelieveSection/BelieveSection.scss
+++ b/src/components/BelieveSection/BelieveSection.scss
@@ -2,6 +2,7 @@
 
 .believe {
     background-color: var(--color-lightgray);
+    content-visibility: auto;
 
     @include tablet {
         position: relative;
