--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -33,6 +33,10 @@
         @include font(var(--font-family), 700, 1);
         color: var(--color-blue);
     }
+
+    @include tablet-upper {
+        display: none !important;
+    }
 }
 
 .burger-menu--active {
