--- a/src/components/BelieveSection/BelieveSection.scss
+++ b/src/components/BelieveSection/BelieveSection.scss
@@ -12,7 +12,7 @@
             content: "";
             position: absolute;
             inset: 0;
-            background-image: url("../../assets/images/accredited-farmers-fruits.png");
+            background-image: url("@assets/images/decorative/accredited-farmers-fruits.webp");
             background-repeat: no-repeat;
             background-size: contain;
             background-position: 450px center;
