fix(components): fix some bugs in components (styles, logic)

--- a/src/components/DropdownSearch/DropdownSearch.scss
+++ b/src/components/DropdownSearch/DropdownSearch.scss
@@ -177,6 +177,8 @@
 
     &__product-image {
         border-radius: 5px;
+        width: 40px;
+        height: 40px;
     }
 
     &__product-title {
